@@ -1,6 +1,6 @@
 Package: lme4
-Version: 0.9975-5
-Date: 2006-10-15
+Version: 0.9975-6
+Date: 2006-10-16
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
